--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
     <groupId>jakarta.servlet</groupId>
     <artifactId>jakarta.servlet-api</artifactId>
-    <version>5.0.0</version> <!-- অথবা তোমার Tomcat version অনুযায়ী -->
+    <version>5.0.0</version> 
     <scope>provided</scope>
 </dependency>
 
